# polaris

./: README.md  package-lock.json  package.json  svelte.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connection.rs  main.rs
src/lib/: settings.ts  utils.ts
src/lib/connection/: connector.ts  handle.ts  index.ts  tauri.ts
src/lib/db/: account.ts  index.ts  roster.ts  types.ts
src/lib/omemo/: index.ts  protobuf.ts
src/lib/secret/: index.ts  secret.ts  tauri.ts
src/lib/stores/: presence.ts
src/lib/types/: index.ts  stanza.ts
src/routes/: +page.svelte
src/routes/app/: +layout.svelte  +page.svelte
src/routes/app/chat/[jid]/: +page.svelte
src/routes/app/roster/: +page.svelte
src/routes/app/settings/: +page.svelte
src/routes/login/: +page.svelte
